app/events/events.scss
#events {
  #create-event-container {
    position: relative;

    > i {
      position: absolute;
      color: #aaa;
      font-size: 1.6em;
      top: 23px;
      left: 20px;
    }
  }
  #create-event-prompt {
    background-color: #fff;
    width: calc(100% - 20px);
    margin-left: 10px;
    margin-top: 10px;
    padding-left: 48px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
  }
  #create-event-prompt {
    font-size: 20px;
  }
  .item-divider {
    text-align: center;
    padding-left: 0;
    padding-right: 0 !important;
    padding-bottom: 0;
    min-height: 26px;
    font-weight: 700;
  }
  .divider-title {
    background-color: #fff;
    padding-right: 7px;
    padding-left: 7px;
  }
  .divider-line {
    border-top: 1px solid #eee;
    margin-top: -11px;
  }
}

